// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`truncate component should render a truncate component with default value 1`] = `
<div>
  <div
    class="truncate svelte-4ya5ts"
    title=""
  >
    
  </div>
</div>
`;

exports[`truncate component should render a truncate component with value 1`] = `
<div>
  <div
    class="truncate svelte-4ya5ts"
    title="TEXT"
  >
    TEXT
  </div>
</div>
`;
